Remove hardtop_plat/FPTOOLS_TOP_ABS_PLATFORM They are now the same as hardtop/FPTOOLS_TOP_ABS, so use those instead.
Also removed some substitutions of / for \, as we now use a Haskell
program to find the top path, and it only makes paths with /s in.

--- a/mk/config.mk.in
+++ b/mk/config.mk.in
@@ -497,10 +497,9 @@ ifeq "$(TARGETPLATFORM)" "i386-unknown-mingw32"
 DEFAULT_TMPDIR		= /C/TEMP
 endif
 
-# FPTOOLS_TOP: the top of the fptools hierarchy, absolute path. (POSIX / unix-style path).
+# FPTOOLS_TOP: the top of the fptools hierarchy, absolute path.
+# On Windows this is a c:/foo/bar style path.
 FPTOOLS_TOP_ABS		= @hardtop@
-# The platform specific version of 'hardtop'.
-FPTOOLS_TOP_ABS_PLATFORM = @hardtop_plat@
 
 # This gets used in the default docdir
 PACKAGE_TARNAME = @PACKAGE_TARNAME@
