Don't put directories for unbuildable libraries in bindists We think there is a library there, and then installPackage fails to install it.

--- a/libraries/Makefile
+++ b/libraries/Makefile
@@ -343,8 +343,8 @@ endif
 
 $(foreach SUBDIR,$(SUBDIRS),binary-dist.library.$(SUBDIR)): \
 binary-dist.library.%:
-	$(MKDIRHIER) $(BIN_DIST_LIBDIR)/$*
 	if ifBuildable/ifBuildable $*; then \
+	  $(MKDIRHIER) $(BIN_DIST_LIBDIR)/$* \
 	  cd $* && \
 	  cp    $*.cabal      $(BIN_DIST_LIBDIR)/$* && \
 	  cp    LICENSE       $(BIN_DIST_LIBDIR)/$* && \
