--- a/mk/config.mk.in
+++ b/mk/config.mk.in
@@ -501,9 +501,6 @@ endif
 # On Windows this is a c:/foo/bar style path.
 FPTOOLS_TOP_ABS		= @hardtop@
 
-# This gets used in the default docdir
-PACKAGE_TARNAME = @PACKAGE_TARNAME@
-
 BIN_DIST_NAME=ghc-$(ProjectVersion)
 BIN_DIST_TOPDIR_REL=$(FPTOOLS_TOP)
 BIN_DIST_TOPDIR_ABS=$(FPTOOLS_TOP_ABS)
@@ -538,6 +535,9 @@ BIN_DIST_INST_DIR = $(FPTOOLS_TOP_ABS)/bindisttest/installed
 # NOTE: The default e.g. ${docdir} above means that autoconf substitutes the
 # string "${docdir}", not the value of docdir! This is crucial for the GNU
 # coding standards.
+
+# This gets used in the default docdir when autoconf >= 2.60 is used
+PACKAGE_TARNAME := @PACKAGE_TARNAME@
 
 prefix          := @prefix@
 
