Add a crucial missing ;

--- a/libraries/Makefile
+++ b/libraries/Makefile
@@ -344,7 +344,7 @@ endif
 $(foreach SUBDIR,$(SUBDIRS),binary-dist.library.$(SUBDIR)): \
 binary-dist.library.%:
 	if ifBuildable/ifBuildable $*; then \
-	  $(MKDIRHIER) $(BIN_DIST_LIBDIR)/$* \
+	  $(MKDIRHIER) $(BIN_DIST_LIBDIR)/$*; \
 	  cd $* && \
 	  cp    $*.cabal      $(BIN_DIST_LIBDIR)/$* && \
 	  cp    LICENSE       $(BIN_DIST_LIBDIR)/$* && \
