--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -855,7 +855,7 @@ GhcLibHcOpts =
 HS_IFACES   = $(addsuffix .$(way_)hi,$(basename $(HS_OBJS)))
 
 # Haddock can't handle recursive modules currently, so we disable it for now.
-HADDOCK_DOCS = NO
+override HADDOCK_DOCS = NO
 
 # Tell package.mk not to set $(HC)
 NO_SET_HC = YES
