Add a "show" target here, too, quite useful for debugging the build process MERGE TO STABLE

--- a/libraries/Makefile
+++ b/libraries/Makefile
@@ -20,9 +20,12 @@
 #   [ -e foo/configure.ac ] && ( cd foo && autoreconf )
 #   make make.library.foo
 
-.PHONY: default_target
+.PHONY: default_target show
 
 default_target: all
+
+show:
+	@echo '$(VALUE)="$($(VALUE))"'
 
 # make doesn't give us an easy way to get the libraries built in
 # dependency order the first time, but not rebuild base (for example)
