Add a BeConservative setting to the make system If it is set, we don't try to use clock_gettime

--- a/mk/config.mk.in
+++ b/mk/config.mk.in
@@ -291,6 +291,10 @@ else
 GhcEnableTablesNextToCode=YES
 endif
 
+# When building bindists we set this to yes so that the binaries are as
+# portable as possible.
+BeConservative = NO
+
 #
 # Building various ways?
 # (right now, empty if not).
