Resurrect the "lib" subdirectory in the installation tree, it was somehow lost Having all package directory directly in the toplevel installation directory would be a bad thing because of potential name clashes, and it wasn't done this way earlier, so reinstantiate the old layout.
MERGE TO STABLE

--- a/libraries/Makefile
+++ b/libraries/Makefile
@@ -223,7 +223,7 @@ stamp/configure.library.build$(CONFIGURE_STAMP_EXTRAS).%: %/setup/Setup
 	           $(CONFIGURE_OPTS) \
 	           --prefix='$$topdir' \
 	           --bindir='$(bindir)' \
-	           --libdir='$(libdir)' \
+	           --libdir='$(libdir)/lib' \
 	           --libsubdir='$$pkgid' \
 	           --libexecdir='$(libexecdir)' \
 	           --datadir='$(datadir)' \
@@ -339,7 +339,7 @@ $(foreach SUBDIR,$(SUBDIRS),install.library.$(SUBDIR)): \
 install.library.%: installPackage/installPackage ifBuildable/ifBuildable
 	if ifBuildable/ifBuildable $*; then \
 	  cd $* && \
-	  ../installPackage/installPackage '$(DESTDIR)' '$(prefix)' '$(bindir)' '$(libdir)' '$(libexecdir)' '$(datadir)' '$(docdir)' '$(htmldir_install)' '$(htmldir_configure)' '$(GHC_PKG_PROG)' '$(DESTDIR)$(libdir)/package.conf' ; \
+	  ../installPackage/installPackage '$(DESTDIR)' '$(prefix)' '$(bindir)' '$(libdir)/lib' '$(libexecdir)' '$(datadir)' '$(docdir)' '$(htmldir_install)' '$(htmldir_configure)' '$(GHC_PKG_PROG)' '$(DESTDIR)$(libdir)/package.conf' ; \
 	fi
 
 .PHONY: binary-dist binary-dist.library.%
