Fix --print-docdir for relocatable builds; fixes #1226

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -272,6 +272,11 @@ endif
 	@echo "cUSER_WAY_OPTS        = \"$(USER_WAY_OPTS)\"" >> $(CONFIG_HS)
 	@echo "cDEFAULT_TMPDIR       = \"$(DEFAULT_TMPDIR)\"" >> $(CONFIG_HS)
 	@echo "cDocDir               = \"$(docdir)\""         >> $(CONFIG_HS)
+ifeq "$(RelocatableBuild)" "YES"
+	@echo "cRelocatableBuild     = True"                  >> $(CONFIG_HS)
+else
+	@echo "cRelocatableBuild     = False"                 >> $(CONFIG_HS)
+endif
 	@echo done.
 
 CLEAN_FILES += $(CONFIG_HS)
